[package]
name = "retro-handhelds-overlay"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts" ]}
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"